plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'de.knollfrank.extensionsformaps'
    compileSdk 37

    androidResources {
        generateLocaleConfig true
    }

    defaultConfig {
        applicationId "de.knollfrank.extensionsformaps"
        minSdk 26
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        buildConfigField "boolean", "SHOW_PLANNING_CARD", "false"
    }

    flavorDimensions = ["mode"]
    productFlavors {
        remoteControl {
            dimension "mode"
            applicationIdSuffix ".remotecontrol"
            versionNameSuffix "-remotecontrol"
            buildConfigField "boolean", "SHOW_ACCESSIBILITY_SETTINGS", "true"
            buildConfigField "boolean", "FEATURE_ROUTE_PREVIEW_VISIBLE", "true"
        }
        standalone {
            dimension "mode"
            buildConfigField "boolean", "SHOW_ACCESSIBILITY_SETTINGS", "false"
            buildConfigField "boolean", "FEATURE_ROUTE_PREVIEW_VISIBLE", "false"
        }
    }

    buildFeatures {
        buildConfig = true
        viewBinding true
    }

    buildTypes {
        debug {
            buildConfigField "boolean", "SHOW_PLANNING_CARD", "true"
        }
        release {
            optimization {
                enable false
            }
        }
    }

    testOptions {
        unitTests {
            includeAndroidResources = true
        }
    }

    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
}

dependencies {
    coreLibraryDesugaring libs.desugar.jdk.libs

    implementation libs.activity.ktx
    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.material
    implementation libs.androidx.browser

    // Core App Dependencies
    implementation libs.recyclerview
    implementation libs.jsprit.core
    implementation libs.okhttp
    implementation libs.retrofit
    implementation libs.retrofit.converter.gson
    implementation libs.gson
    implementation libs.guava
    implementation libs.protobuf.javalite

    testImplementation libs.junit
    testImplementation libs.mockwebserver
    testImplementation libs.robolectric
    testImplementation libs.mockito.core
    testImplementation libs.core

    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.uiautomator
    androidTestImplementation libs.rules
}